<resources>
    <string name="app_id">1661621287387635</string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="no_name"></string>
    <string name="app_name">Item Finder</string>
    <string name="no_results_found">No Results Found.</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="starred">Starred</string>
    <string name="featured">Featured</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="news">News</string>
    <string name="weather">Weather</string>
    <string name="about_us">About Us</string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="header_categories">Categories</string>
    <string name="header_extras">Extras</string>
    <string name="header_users">Users</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="network_error">Network Error</string>
    <string name="no_network_connection">No Network Connection.</string>
    <string name="placeholder_username">Username</string>
    <string name="placeholder_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_login_to_facebook">Login to Facebook</string>
    <string name="button_login_to_twitter">Login to Twitter</string>
    <string name="view">View</string>
    <string name="comments">Comment(s)</string>
    <string name="login_error">Login Error</string>
    <string name="login_error_review">You need to login before you can post review.</string>
    <string name="rating_error_finish">You have finished rating this store.</string>
    <string name="choose_browser">Choose a browser :</string>
    <string name="choose_email_client">Choose an Email client :</string>
    <string name="email_subject">Item Finder Inquiry</string>
    <string name="email_body">Hi, your item is awesome.</string>
    <string name="cannot_proceed">Cannot proceed because details isnt provided.</string>
    <string name="no_image_to_display">No image to be displayed.</string>
    <string name="handset_not_supported">This handset doest not support telephony service.</string>
    <string name="action_error">Action Error</string>
    <string name="sms_body">Hi, your item is awesome.</string>
    <string name="review">Review</string>
    <string name="problems_encountered_facebook">Problems encountered while posting to Facebook.</string>
    <string name="publish_cancelled">Publish cancelled.</string>
    <string name="publish_error">Publishing Error</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="user_name">Username</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="some_fields_are_missing">Some fields are missing.</string>
    <string name="password_length_error">Password must be at lease 8 characters long.</string>
    <string name="field_error">Field Error</string>
    <string name="update_profile">Update Profile</string>
    <string name="search_by_name_or_address">Search by Name or Address</string>
    <string name="radius">Radius</string>
    <string name="km">Km.</string>
    <string name="search_nearby">Search Nearby</string>
    <string name="all_categories">All Categories</string>
    <string name="location_error">Location Error</string>
    <string name="share">Share</string>
    <string name="placeholder_review">Review</string>
    <string name="chars_left">Char(s) left</string>
    <string name="about_us_detail">We are small team that aims for awesome Game and Apps Development. There are no application we cannot do as long as there is music that keeps us going and creating wonderful apps.\n\nIf you are looking for awesome Teams that will make your Apps interactive and awesome. Just contact us.</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_and_conditions_details">1.) Lorem Ipsum dolor\n\nLorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\n\n2.) Lorem Ipsum dolor\n\nLorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\n\n3.) Lorem Ipsum dolor\n\nLorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="logout">Logout</string>
    <string name="text_empty">-------</string>
    <string name="email_subject_company">Item Finder Inquiry</string>
    <string name="email_body_company">Hi! Good day.</string>
    <string name="alert_logout_user_title">Logout User</string>
    <string name="alert_logout_user_title_details">Are you sure you want to logout?</string>
    <string name="alert_logout_user_yes">Yes</string>
    <string name="alert_logout_user_no">No</string>
    <string name="click_to_add_edit">Click to Add/Edit</string>
    <string name="mi">Mi</string>
    <string name="find_nearby">Find Nearby</string>
    <string name="empty_error">Text Empty Error</string>
    <string name="empty_error_details">Provide text for review.</string>
    <string name="searching">Searching...</string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="failed_data">Failed to get data.</string>
    <string name="editing_fields">**When editing all fields are necessary.</string>
    <string name="loading">Loading...</string>
    <string name="empty_distance">----</string>
    <string name="content_authority">----</string>
    <string name="seller_name_or_user_name">Seller Name or User Name</string>
    <string name="price_range">Price Range</string>
    <string name="sort_by">Sort By</string>
    <string name="no_sorting">No Sorting</string>
    <string name="price">Price</string>
    <string name="date_posted">Date Posted</string>
    <string name="name">Name</string>
    <string name="distance">Distance</string>
    <string name="detail_item_name">ITEM NAME</string>
    <string name="detail_item_price">ITEM PRICE</string>
    <string name="detail_date_posted">DATE POSTED</string>
    <string name="detail_distance">DISTANCE</string>
    <string name="detail_category">CATEGORY</string>
    <string name="detail_desc">DESCRIPTION</string>
    <string name="detail_seller_info">SELLER INFO</string>
    <string name="detail_share_to_facebook">Share to Facebook</string>
    <string name="detail_share_to_twitter">Share to Twitter</string>
    <string name="detail_message_seller">Message Seller</string>
    <string name="detail_email_seller">Email Seller</string>
    <string name="detail_call_seller">Call Seller</string>
    <string name="no_value">-----</string>
    <string name="items">Items</string>
    <string name="reviews">Reviews</string>
    <string name="last_logged">Last Logged:</string>
    <string name="item_count">Item Count:</string>
    <string name="user_items_title">USER ITEMS</string>
    <string name="member_reviews_title">MEMBER REVIEWS</string>
    <string name="title_item_name">ITEM NAME</string>
    <string name="title_item_price">ITEM PRICE</string>
    <string name="title_category">CATEGORY</string>
    <string name="select_category">Select Category</string>
    <string name="title_item_type">ITEM TYPE</string>
    <string name="new_item">New</string>
    <string name="used">Used</string>
    <string name="title_item_desc">ITEM DESCRIPTION</string>
    <string name="item_desc">Item Description</string>
    <string name="send">Send</string>
    <string name="delete_image">Delete Image</string>
    <string name="delete_image_details">Are you sure you want to delete image?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="category_name_error">Empty Category</string>
    <string name="category_name_error_details">Category name should not be empty.</string>
    <string name="category_selection_error">Category Missing</string>
    <string name="please_select_category">Please select category to proceed.</string>
    <string name="error_title_item_name">Empty Item Name</string>
    <string name="error_details_item_name">Please provide item name.</string>
    <string name="error_title_price">Empty Item Price</string>
    <string name="error_details_price">Please provide a price.</string>
    <string name="error_title_desc">Empty Item Description</string>
    <string name="error_details_desc">Please provide a description.</string>
    <string name="error_title_photos">Empty Item Photos</string>
    <string name="error_details_photos">Please provide at least 1 photo.</string>
    <string name="error_title_location">Location Service Error</string>
    <string name="error_details_location">Please enable your location service. Go to Settings > Location Service > Switch On.</string>
    <string name="syncing_data_to_server">Syncing to Server.</string>
    <string name="uploading_photo_to_server">Uploading photo to server. This may take awhile.</string>
    <string name="item_added">Item Added!</string>
    <string name="item_updated">Item Updated!</string>
    <string name="edit_item">Edit Item</string>
    <string name="my_items">My Items</string>
    <string name="user_review_error_details">You need to login in order to add reviews.</string>
    <string name="user_review_error">Login Error</string>
    <string name="phone_no">Phone Number</string>
    <string name="sms_no">SMS Number</string>
    <string name="hint_item_name">Item Name</string>
    <string name="hint_item_price">Item Price</string>
    <string name="detail_contacts">CONTACTS</string>
    <string name="sold">SOLD</string>
    <string name="promotions">Promotions</string>
    <string name="mark_as_sold">Mark as Sold</string>
    <string name="unpublish_item">Unpublish Item</string>
    <string name="publish_item">Publish Item</string>
    <string name="marking_as_sold">Marking as Sold...</string>
    <string name="item_mark_as_sold">Item marked as Sold!</string>
    <string name="publishing_item">Publishing Item</string>
    <string name="item_published">Item Published!</string>
    <string name="unpublishing_item">Unpublishing Item</string>
    <string name="item_unpublished">Item Unpublished!</string>
    <string name="latest_items">LATEST ITEMS</string>
    <string name="tap_back_again_to_exit">Please tap back again to exit the app.</string>
    <string name="update">Update</string>
    <string name="exit_item">Exit Item</string>
    <string name="discard_changes">You want to discard changes</string>
    <string name="problems_encountered_login">Problems encountered during login.</string>
    <string name="no_sms_no">The user does not provide any sms number.</string>
    <string name="no_phone_no">The user does not provide any phone number.</string>
    <string name="title_item_currency">CURRENCY</string>
    <string name="hint_item_currency">Currency</string>
    <string name="item_nearby_radius">Item Nearby Radius</string>
    <string name="enter_radius_in_km">Enter radius in KM</string>
    <string name="item_radius">Item Radius</string>
    <string name="settings">Settings</string>
</resources>