<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_gray_color">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/detail_seller_info"
            android:textColor="@color/text_gray_color"
            android:id="@+id/textView3"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_list_up_down"
            android:layout_marginTop="@dimen/dimen_10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/dimen_10dp"
                    android:id="@+id/linearItemShareToFacebook">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/last_logged"
                        android:id="@+id/textView4"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="right" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/detail_share_to_facebook"
                        android:id="@+id/tvLastLogged"
                        android:layout_marginLeft="@dimen/dimen_10dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="left" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView20"
                android:background="@drawable/line_divider"
                android:layout_marginLeft="@dimen/dimen_10dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/dimen_10dp"
                    android:id="@+id/linearLayout" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/item_count"
                        android:id="@+id/textView5"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="right" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/detail_share_to_facebook"
                        android:id="@+id/tvItemCount"
                        android:layout_marginLeft="@dimen/dimen_10dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="left" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
